--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'ML'
 - !lcsh 'Composers -- Germany -- Biography -- Juvenile literature'
 - !lcsh 'Wagner, Richard, 1813-1883 -- Juvenile literature'
+- GITenberg
 title: 'Wagner : The Story of the Boy Who Wrote Little Plays'
 url: http://www.gutenberg.org/ebooks/35128
